--- a/Sjuklöner/Views/Account/Login.cshtml
+++ b/Sjuklöner/Views/Account/Login.cshtml
@@ -59,7 +59,7 @@
         }
     </section>
 </div>
-@Html.Partial("_BankIDLogin")
+@*@Html.Partial("_BankIDLogin")
 @*<div class="row">
         <p class="col col-md-2"></p>
 
